# feed-reader/api/controllers/feed.methods.js
@@ -1,5 +1,6 @@
 'use strict';
 const Feed = require('../../models/feed.model');
+const Article = require('../../models/article.model');
 
 module.exports = {
   registerFeed: registerFeed,
@@ -15,12 +16,26 @@ module.exports = {
  */
 
 function registerFeed(req, res) {
-  let newFeed = new Feed(req.swagger.params.feed.value);
-  newFeed.save((err, result) => {
-    if (err) {
-      res.status(500).send({message: err.message});
-    }
-    res.status(200).json(result);
+  
+  let newFeed = new Feed({
+    title: '',
+    articles: [],
+    userName: req.swagger.params.feed.value.userName,
+    URL: req.swagger.params.feed.value.URL
+  });
+  
+  getFeedTitle(newFeed.URL)
+  .then((feedTitle) => {
+    newFeed.title = feedTitle;
+    newFeed.save((err, result) => {
+      if (err) {
+        res.status(500).send({message: err.message});
+      }
+      res.status(200).json(result);
+    });
+  })
+  .catch((err) => {
+    res.status(500).send({message: err.message});
   });
 }
 
@@ -59,3 +74,77 @@ function deleteFeed(req, res) {
     }
   });
 }
+
+/**
+ * Get feed content
+ * @param req
+ * @param res
+ */
+function updateFeedContents(req, res) {
+  let newArticle = new Article({});
+  Feed.findOne({_id: req.swagger.params.feedId.value}, (err, feed) => {
+    if (err) {
+      res.status(500).send({message: err.message});
+    }
+    console.log(`--feed was found---`);
+    console.log(feed);
+    getFeedContent(feed.URL)
+    .then((feedContent) => {
+      console.log(`===feedContent===`);
+      console.log(feedContent);
+    })
+    .catch((err) => {
+      res.status(500).send({message: err.message});
+    });
+    // res.status(200).json(result.result);
+  });
+}
+
+/**
+ * PRIVATE methods
+ */
+
+const getFeedTitle = function(url) {
+  const FeedMe = require('feedme');
+  let parser = new FeedMe();
+  
+  // return new pending promise
+  return new Promise((resolve, reject) => {
+    // select http or https module, depending on reqested url
+    const lib = url.startsWith('https') ? require('https') : require('http');
+    const request = lib.get(url, (response) => {
+      // handle http errors
+      if (response.statusCode < 200 || response.statusCode > 299) {
+        reject(new Error('Failed to load page, status code: ' + response.statusCode));
+      }
+      parser.on('title', function(title) {
+        resolve(title);
+      });
+      response.pipe(parser);
+    });
+    // handle connection errors of the request
+    request.on('error', (err) => reject(err))
+  })
+};
+const getFeedContent = function(url) {
+  const FeedMe = require('feedme');
+  let parser = new FeedMe();
+  
+  // return new pending promise
+  return new Promise((resolve, reject) => {
+    // select http or https module, depending on reqested url
+    const lib = url.startsWith('https') ? require('https') : require('http');
+    const request = lib.get(url, (response) => {
+      // handle http errors
+      if (response.statusCode < 200 || response.statusCode > 299) {
+        reject(new Error('Failed to load page, status code: ' + response.statusCode));
+      }
+      parser.on('item', function(item) {
+        resolve(item);
+      });
+      response.pipe(parser);
+    });
+    // handle connection errors of the request
+    request.on('error', (err) => reject(err))
+  })
+};
