# feed-reader/api/swagger/swagger.yaml
@@ -86,6 +86,24 @@ paths:
             $ref: "#/definitions/ErrorResponse"
   /feeds/{feedId}:
     x-swagger-router-controller: feed.methods
+    put:
+      description: Update feed by "_id".
+      operationId: updateFeedContents
+      parameters:
+        - in: path
+          name: feedId
+          required: true
+          type: string
+          description: Feed _id.
+      responses:
+        200:
+          description: Success
+          schema:
+            type: object
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
     delete:
       description: Delete feeds by "_id" from the database.
       operationId: deleteFeed
@@ -112,11 +130,9 @@ definitions:
     type: object
     required:
       - userName
-      - title
+      - URL
     properties:
       userName:
-        type: string
-      title:
         type: string
       URL:
         type: string
